--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="./static/app.js"></script>
   <script src="samples.json"></script>
+  <script src="data.js"></script>
   
 </body>
 
